--- a/custom_components/switchbee_homeassistant/manifest.json
+++ b/custom_components/switchbee_homeassistant/manifest.json
@@ -9,7 +9,8 @@
   "iot_class": "local_polling",
   "name": "SwitchBee Integration",
   "requirements": [
-    "https://github.com/barp/bswitcher/releases/download/v0.1.0/bswitch_python-0.1.0.tar.gz"
+    "https://github.com/barp/bswitcher/releases/download/v0.1.0/bswitch_python-0.1.0.tar.gz",
+    "aiohttp"
   ],
   "version": "0.1.0"
 }
