--- a/custom_components/switchbee_homeassistant/manifest.json
+++ b/custom_components/switchbee_homeassistant/manifest.json
@@ -2,7 +2,7 @@
   "codeowners": [
     "@barp"
   ],
-  "config_flow": false,
+  "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/barp/switchbee_homeassistant",
   "domain": "switchbee_homeassistant",
